--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "actioncable": "^5.0.2",
     "autoprefixer": "^6.7.7",
     "axios": "^0.16.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.4",
     "compression-webpack-plugin": "^0.3.2",
@@ -51,6 +54,7 @@
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.6.1",
     "redux-saga": "^0.14.5",
+    "ress": "^1.2.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
