--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "glob": "^7.1.1",
     "js-yaml": "^3.8.2",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^1.3.3",
@@ -54,6 +55,7 @@
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.6.1",
     "redux-saga": "^0.14.5",
+    "reselect": "^3.0.0",
     "ress": "^1.2.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
