--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
+    "react-timeago": "^3.2.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.6.1",
