--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "flow-bin": "^0.42.0",
+    "react-addons-perf": "^15.4.2",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "eslint-config-standard-react": "^4.3.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-react": "^6.10.3",
+    "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "flowtype-loader": "^0.2.2",
